@@ -19,6 +19,7 @@ Version 1.0.7.22
      * Lotus Notes @Formulas (Richard Civil)
      * LotusScript (Richard Civil)
      * Scala (Franco Lombardo)
+     * ActionScript 3 (Jordi Boggiano)
   -  Fixed a problem not yet addressed in 1.0.7.21 regarding highlighting of
      symbols that caused some extra characters to be added in the output or
      broke highlighting and standard compliance due to missing escaping of
@@ -161,6 +162,7 @@ Version 1.0.7.17
   -  Added /* ... */ comments to coldfusion (Jeff Howden)
 Version 1.0.7.16
   -  Added language files
+     * ActionScript (Steffen Krause)
      * C++/QT (Iulian M)
      * PL/SQL (Victor Engmark)
   -  Fixed up my e-mail address everywhere
